--- a/css/styles.css
+++ b/css/styles.css
@@ -2213,11 +2213,41 @@ path.q2-3 {
 }
 
 .data {
-    width: 50rem;
-    padding: 2rem;
-    margin: 1rem 5rem;
+    width: 70rem;
+    padding: 5rem 2rem;
+    margin: 0 5rem;
     position: relative;
     font-size: 0;
+}
+
+.data-figura {
+    width: 20rem;
+    height: 20rem;
+    position: absolute;
+    right: 5rem;
+    top: 5rem;
+    border-radius: 40%;
+    z-index: 2;
+    background-color: #EFF6FC;
+    transform: rotate(45deg);
+    animation: rotacion 10000ms linear infinite;
+}
+
+@keyframes rotacion {
+
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+
+}
+
+.data-header-container {
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .data-titulo {
@@ -2226,11 +2256,19 @@ path.q2-3 {
     margin: 0;
 }
 
+.data-titulo:after {
+        content: '';
+        display: block;
+        height: 2px;
+        width: 3rem;
+        background-color: #021e5c;
+    }
+
 .data-texto {
     font-size: 1rem;
     font-family: 'IBM Plex Sans', sans-serif;
     max-width: 30rem;
-    display: inline-block;
+    display: block;
 }
 
 .data-texto + .data-texto {
@@ -2240,6 +2278,10 @@ path.q2-3 {
 .data-icon {
     width: 10rem;
     height: 10rem;
+    position: absolute;
+    top: 9rem;
+    right: 10rem;
+    z-index: 2;
 }
 
 .dataset {
