incluyendo la seccion de datos en el menu | minificando antes de subir version

--- a/src/css/_data.css
+++ b/src/css/_data.css
@@ -1,48 +1,22 @@
 .data {
-    width: 70rem;
-    padding: 5rem 2rem;
-    margin: 0 5rem;
+    width: 100%;
+    padding: 2rem 1rem;
+    margin: 0;
     position: relative;
     font-size: 0;
 }
 
 .data-figura {
-    width: 30rem;
-    height: 30rem;
-    position: absolute;
-    right: 0;
-    top: 5rem;
-    border-radius: 40%;
-    z-index: 2;
-    background-color: var(--data);
-    transform: rotate(45deg);
-    animation: rotacion 10000ms linear infinite;
+    display: none;
 }
 
-.data-figura-dos {
-    background-color: var(--bgcHeader);
-    animation: rotacion 9000ms linear infinite;
-    z-index: 1;
-}
-
-@keyframes rotacion {
-
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-
-}
 .data-header-container {
     display: inline-block;
     vertical-align: middle;
 }
 
 .data-titulo {
-    font-size: 6rem;
+    font-size: 3rem;
     font-family: var(--fontBislai);
     margin: 0;
     &:after {
@@ -59,38 +33,32 @@
     font-family: var(--fontPlex);
     max-width: 30rem;
     display: block;
+    list-style-type: none;
     + .data-texto {
         margin-top: 0;
     }
 }
 
 .data-icon {
-    width: 10rem;
-    height: 10rem;
-    position: absolute;
-    top: 15rem;
-    right: 10rem;
-    z-index: 2;
+    display: none;
 }
 
 .dataset {
     background-color: var(--data);
-    padding: 2rem;
+    padding: 2rem 1rem;
     &:nth-child(2n) {
         background-color: var(--white);
     }
 }
 
 .dataset-container {
-    max-width: 90%;
-    margin: 0 5rem;
-    font-size: 0;
+    max-width: 100%;
 }
 
 .dataset-title {
-    font-size: 4rem;
+    font-size: 2rem;
     font-family: var(--fontBislai);
-    margin-bottom: 0;
+    margin: 0;
 }
 
 .dataset-label {
@@ -106,18 +74,8 @@
 }
 
 .data-texto-container {
-    width: 40%;
-    display: inline-block;
-    vertical-align: top;
+    width: 100%;
 }
-
-/* stylelint-disable */
-
-.data-texto {
-    list-style-type: none;
-}
-
-/* stylelint-enable */
 
 .data-texto-list {
     padding: 1rem 0;
@@ -128,10 +86,8 @@
 }
 
 .dataset-image {
-    display: inline-block;
-    width: 50%;
-    margin-left: 10%;
-    font-size: 1rem;
+    width: 100%;
+    font-size: .8rem;
     .hljs {
         border-radius: 20px;
     }
@@ -142,12 +98,99 @@
     display: inline-block;
     padding: 1rem 2rem;
     font-size: 1rem;
-    font-weight: 600;
     color: var(--black);
     border-radius: 5px;
     background-color: var(--bgcTabs);
     text-decoration: none;
     &:not(:last-child) {
         margin-right: 1rem;
+    }
+}
+
+@media only screen and (min-width: 48em) {
+
+    .data-titulo {
+        font-size: 6rem;
+    }
+
+    .dataset-title {
+        font-size: 4rem;
+    }
+
+    .data-figura {
+        display: inline-block;
+        width: 30rem;
+        height: 30rem;
+        position: absolute;
+        right: 0;
+        top: 5rem;
+        border-radius: 40%;
+        z-index: 2;
+        background-color: var(--data);
+        transform: rotate(45deg);
+        animation: rotacion 10000ms linear infinite;
+    }
+
+    .data-figura-dos {
+        background-color: var(--bgcHeader);
+        animation: rotacion 9000ms linear infinite;
+        z-index: 1;
+
+    }
+
+    @keyframes rotacion {
+
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
+
+    }
+
+    .data-icon {
+        display: inline-block;
+        width: 10rem;
+        height: 10rem;
+        position: absolute;
+        top: 15rem;
+        right: 10rem;
+        z-index: 2;
+    }
+
+    .dataset-container {
+        max-width: 90%;
+        margin: 0 5rem;
+        font-size: 0;
+    }
+
+    .data-texto-container {
+        width: 40%;
+        display: inline-block;
+        vertical-align: top;
+    }
+
+    .dataset {
+        padding: 2rem;
+    }
+
+    .dataset-image {
+        display: inline-block;
+        width: 50%;
+        margin-left: 10%;
+        max-width: 40rem;
+        font-size: 1rem;
+    }
+
+}
+
+@media only screen and (min-width: 64em) {
+
+    .data {
+        width: 70rem;
+        padding: 5rem 2rem;
+        margin: 0 5rem;
     }
 }
