--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -1511,8 +1511,8 @@ path.q2-3 {
 
 .link-mocion {
     display: inline-block;
-    padding: 1rem 2rem;
-    margin: 2rem 0;
+    padding: .75rem 1rem;
+    margin: 1rem 0;
     position: relative;
     border-radius: 5px;
     text-decoration: none;
