--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -962,6 +962,12 @@ path.q2-3 {
     top: 10rem;
     left: 5vw;
     z-index: 10;
+    &.bislai-stats {
+        background-color: #ffd474;
+        .bislai-home-body-left-text-white {
+            color: var(--black);
+        }
+    }
 }
 
 .bislai-home-body-left-text-white {
@@ -971,6 +977,7 @@ path.q2-3 {
     display: inline-block;
     vertical-align: middle;
     max-width: 30rem;
+    font-weight: bold;
 }
 
 .bislai-home-body-left-container {
@@ -1339,6 +1346,15 @@ path.q2-3 {
     padding: 1rem;
     width: 100%;
     font-family: var(--fontBislai);
+}
+
+.bislai-stats-card-element {
+    position: absolute;
+    top: 15.7rem;
+    z-index: 10;
+    left: 16.25vw;
+    background: var(--white);
+    padding: 2rem;
 }
 
 .navegacion-plenos {
