--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -3,6 +3,7 @@
         "Helvetica Neue", Helvetica, sans-serif;
     --fontBislai: "Fjalla One", sans-serif;
     --fontFair: 'Playfair Display', serif;
+    --condensed: 'Roboto Condensed', sans-serif;
     --fontPlex: 'IBM Plex Sans', sans-serif;
         --black: #121;
     --pureblack: #000;
