--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -1447,9 +1447,9 @@ path.q2-3 {
     position: sticky;
     /* stylelint-enable */
     float: right;
-    top: 30vh;
+    top: 10vh;
     right: 10vw;
-    padding-top: 10vh;
+    width: 46%;
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
@@ -1474,8 +1474,6 @@ path.q2-3 {
     padding: 2rem;
     max-width: 30rem;
     width: 33%;
-    background-color: #f1f1f1;
-    border-right: 1px solid #ccc;
 }
 
 .step {
@@ -1483,12 +1481,18 @@ path.q2-3 {
     height: 100vh;
 }
 
+.step-blanco {
+    border-left: 3px solid #1B1A55;
+    background-color: #6AEAB9;
+    padding: .5rem;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
 .title-estadisticas {
     text-transform: uppercase;
-    font-size: 2rem;
-    background-color: var(--pureblack);
-    color: var(--white);
-    padding: 1rem;
+    font-size: 1rem;
+    color: var(--pureblack);
     width: 100%;
     font-family: var(--fontBislai);
 }
@@ -1769,10 +1773,8 @@ path.q2-3 {
 .calendario-plenos-titulo {
     font-size: 1.5rem;
     font-family: var(--fontBislai);
-    margin-bottom: 2rem;
-    padding: 1rem 2rem;
-    color: var(--white);
-    background-color: var(--pureblack);
+    padding: 0;
+    color: var(--pureblack);
 }
 
 .calendario-plenos-texto {
@@ -1782,16 +1784,11 @@ path.q2-3 {
 @media only screen and (min-width: 48em) {
 
     .label-record {
-        font-size: 3rem;
         padding: 1rem 2rem;
     }
 
     .calendario-plenos {
-        padding: 4rem 0;
-    }
-
-    .calendario-plenos-titulo {
-        font-size: 2.5rem;
+        padding: 2rem 0;
     }
 
     .maw-60 {
@@ -1805,7 +1802,8 @@ path.q2-3 {
     }
 
     .calendario-plenos-texto {
-        margin: 2rem auto;
+        margin: 0 auto;
+        margin-bottom: 1rem;
     }
 }
 
