--- a/src/css/_partidos.css
+++ b/src/css/_partidos.css
@@ -1,30 +1,62 @@
 .partidos-cabecera {
-    min-height: 50vh;
-    padding: 3rem;
+    padding: 1.5rem 10vw;
     width: 100%;
     font-size: 0;
+    &.chunta {
+        .partidos-cabecera-title {
+            background-color: var(--chunta);
+        }
+    }
+    &.ciudadanos {
+        .partidos-cabecera-title {
+            background-color: var(--ciudadanos);
+        }
+    }
+    &.partido-popular {
+        .partidos-cabecera-title {
+            background-color: var(--pp);
+        }
+    }
+    &.zec {
+        .partidos-cabecera-title {
+            background-color: var(--zec);
+            color: var(--white);
+            border-color: var(--black);
+        }
+    }
 }
 
 .partidos-cabecera-izda {
-    width: 45%;
-    display: inline-block;
+    width: max-content;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+    grid-auto-rows: 1fr;
     vertical-align: top;
+    border-radius: 4px;
+    padding: 1rem;
+    position: relative;
+    background-color: #ccc;
 }
 
 .partidos-cabecera-title {
-    font-size: 5rem;
+    font-size: 1.5rem;
+    border-left: 5px solid;
+    background-color: var(--psoe);
     font-family: var(--fontBislai);
     color: var(--black);
     margin: 0;
+    width: max-content;
+    margin-bottom: .5rem;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    padding: .5rem 1rem;
 }
 
-.partidos-cabecera-texto,
 .partidos-cabecera-texto-derecha {
     font-size: 1rem;
     margin: 0 0 1.5rem;
-}
-
-.partidos-cabecera-texto-derecha {
     max-width: 80%;
     margin: 1rem auto;
 }
@@ -34,18 +66,39 @@
     display: inline-block;
 }
 
-#historico {
-    max-width: 80%;
-    margin: 0 auto;
-}
-
 .partidos-concejales {
     font-size: 1rem;
 }
 
-.partido-concejales-lista {
+.partidos-concejales-listado {
+    padding-left: 0;
+}
+
+.partido-concejales-lista-elemento {
     font-size: 1rem;
-    list-style-position: inside;
+    list-style: none;
+    display: block;
+    background-color: var(--white);
+    border-radius: 4px;
+    padding: .75rem;
+    color: var(--black);
+    text-decoration: none;
+    transition: background-color .3s ease-in;
+    &:hover {
+        background-color: var(--grey);
+    }
+}
+
+.concejales-icon {
+    width: 16px;
+    height: auto;
+    display: block;
+    margin-right: .5rem;
+}
+
+.partido-concejales-lista-elemento-texto {
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .partidos-grafico {
@@ -62,14 +115,16 @@
 }
 
 .partidos-grafico-titulo {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     font-family: var(--fontBislai);
     font-weight: bold;
     display: inline-block;
     margin: 0;
-    padding: 2rem;
+    padding: 1rem;
     background-color: var(--white);
-    border-top: 5px solid var(--ciudadanos);
+    border-left: 5px solid var(--ciudadanos);
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
 .partidos-grafico-pp {
@@ -99,8 +154,8 @@
 .partidos-grafico-parrafo {
     font-size: 1rem;
     font-family: var(--fontPlex);
-    margin: 2rem 0;
-    max-width: 60%;
+    margin: 1rem 0;
+    max-width: 50%;
 }
 
 .partidos-grafico-parrafo ~ .partidos-grafico-parrafo {
@@ -113,31 +168,6 @@
     margin-top: 10vh;
 }
 
-.bgc-zec {
-    .partidos-cabecera-title {
-        font-size: 4rem;
-        font-family: var(--fontBislai);
-        color: #d0f3f2;
-        margin: 0;
-    }
-    .partidos-cabecera-texto,
-    .partidos-cabecera-texto-derecha,
-    .partido-concejales-lista a {
-        color: #fff;
-    }
-}
-
-.bgc-pp {
-    .partido-concejales-lista a {
-        color: #05062E;
-    }
-}
-
-.bgc-psoe {
-    .partido-concejales-lista a {
-        color: #f8f8f9;
-    }
-}
 
 @media only screen and (max-width: 48em) {
 
