--- a/src/css/_buscador.css
+++ b/src/css/_buscador.css
@@ -7,6 +7,200 @@
     vertical-align: top;
 }
 
+/*
+Tipue Search 6.0
+Copyright (c) 2017 Tipue
+Tipue Search is released under the MIT License
+http://www.tipue.com/search
+*/
+
+
+/* fonts */
+
+#tipue_search_input,
+#tipue_search_foot_boxes,
+#tipue_search_results_count,
+#tipue_search_warning,
+.tipue_search_content_url,
+.tipue_search_content_debug,
+.tipue_search_related_text {
+    font-size: 14px;
+}
+
+.tipue_search_content_title {
+    font-size: 26px;
+}
+
+.tipue_search_content_text,
+.tipue_search_related_title {
+    font-size: 15px;
+}
+
+.tipue_search_content_bold,
+.tipue_search_related_bold {
+    font-weight: bold;
+}
+
+/* search box */
+
+#tipue_search_input {
+    color: var(--pureblack);
+    border: 0;
+    padding: 16px;
+    margin: 0;
+    height: 48px;
+    background-color: #d3d3d3;
+    font-family: var(--fontSystem);
+    border-radius: 5px;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.tipue_search_icon {
+    width: 24px;
+    height: 24px;
+}
+
+.tipue_search_left {
+    float: left;
+    padding: 15px 9px 0 0;
+}
+
+.tipue_search_right {
+    float: left;
+}
+
+/* search results */
+
+#tipue_search_content {
+    max-width: 750px;
+    padding-top: 15px;
+    margin: 0;
+}
+
+#tipue_search_results_count {
+    color: #333;
+}
+
+#tipue_search_warning {
+    color: #333;
+    margin: 7px 0;
+}
+
+#tipue_search_warning a {
+    color: #5396ea;
+    text-decoration: none;
+}
+
+#tipue_search_warning a:hover {
+    color: #555;
+}
+
+.tipue_search_content_title {
+    color: #666;
+    margin-top: 21px;
+    &:not(:first-child) {
+        border-top: 1px solid #ccc;
+        padding: 10px 0;
+    }
+}
+
+.tipue_search_content_title a {
+    color: #000;
+    text-decoration: none;
+}
+
+.tipue_search_content_title a:hover {
+    color: #666;
+}
+
+.tipue_search_content_url {
+    word-wrap: break-word;
+    hyphens: auto;
+}
+
+.tipue_search_content_url a,
+.tipue_search_related_text a {
+    color: #5396ea;
+    text-decoration: none;
+}
+
+.tipue_search_content_url a:hover,
+.tipue_search_related_text a:hover,
+.tipue_search_related_before,
+.tipue_search_related_after {
+    color: #555;
+}
+
+.tipue_search_content_text {
+    color: #333;
+    word-wrap: break-word;
+    hyphens: auto;
+    margin-top: 8px;
+}
+
+.tipue_search_content_bold {
+    color: #333;
+}
+
+.tipue_search_content_debug {
+    color: #333;
+    margin: 5px 0;
+}
+
+.tipue_search_related_title {
+    color: #333;
+    margin: 26px 0 7px 0;
+}
+
+.tipue_search_related_cols {
+    -webkit-columns: 230px 2;
+    -moz-columns: 230px 2;
+    columns: 230px 2;
+}
+
+#tipue_search_foot {
+    margin: 51px 0 21px 0;
+}
+
+#tipue_search_foot_boxes {
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+}
+
+#tipue_search_foot_boxes li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: inline;
+}
+
+#tipue_search_foot_boxes li a {
+    padding: 10px 17px 11px;
+    background-color: var(--white);
+    border: 1px solid #e3e3e3;
+    border-radius: 1px;
+    color: #333;
+    margin-right: 7px;
+    text-decoration: none;
+    text-align: center;
+}
+
+#tipue_search_foot_boxes li.current {
+    padding: 10px 17px 11px;
+    background: #f6f6f6;
+    border: 1px solid #e3e3e3;
+    border-radius: 1px;
+    color: #333;
+    margin-right: 7px;
+    text-align: center;
+}
+
+#tipue_search_foot_boxes li a:hover {
+    background: #f6f6f6;
+}
+
 @media only screen and (min-width: 48em) {
 
     .contenedor-buscador {
@@ -32,3 +226,4 @@
     }
 
 }
+
