--- a/src/css/_partidos.css
+++ b/src/css/_partidos.css
@@ -120,11 +120,8 @@
     font-weight: bold;
     display: inline-block;
     margin: 0;
-    padding: 1rem;
-    background-color: var(--white);
-    border-left: 5px solid var(--ciudadanos);
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+    padding: .5rem 0;
+    border-radius: 4px;
 }
 
 .partidos-grafico-pp {
@@ -154,8 +151,7 @@
 .partidos-grafico-parrafo {
     font-size: 1rem;
     font-family: var(--fontPlex);
-    margin: 1rem 0;
-    max-width: 50%;
+    margin: .5rem 0;
 }
 
 .partidos-grafico-parrafo ~ .partidos-grafico-parrafo {
