--- a/css/styles.css
+++ b/css/styles.css
@@ -2254,7 +2254,6 @@ http://www.tipue.com/search
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 1rem;
     grid-row-gap: 1rem;
-    grid-auto-rows: 1fr;
     vertical-align: top;
     border-radius: 4px;
     padding: 1rem;
@@ -2276,7 +2275,6 @@ http://www.tipue.com/search
 }
 .partidos-cabecera-texto-derecha {
     font-size: 1rem;
-    margin: 0 0 1.5rem;
     max-width: 80%;
     margin: 1rem auto;
 }
@@ -2289,6 +2287,11 @@ http://www.tipue.com/search
 }
 .partidos-concejales-listado {
     padding-left: 0;
+}
+.partidos-cabecera-subtitle {
+  grid-column: 1 / 5;
+  font-size: 1rem;
+  margin: 0;
 }
 .partido-concejales-lista-elemento {
     font-size: 1rem;
@@ -2316,7 +2319,7 @@ http://www.tipue.com/search
 }
 .partidos-grafico {
     width: 100%;
-    padding: 5vw 10vw;
+    padding: 1rem 10vw;
     font-size: 0;
     margin: 0 auto;
     background-color: #f1f1f1;
@@ -2385,14 +2388,23 @@ http://www.tipue.com/search
     }
 
     .partidos-grafico-titulo {
-        padding: 1rem;
-        font-size: 1.5rem;
+        font-size: 1rem;
         width: 100%;
+        padding: 0;
     }
 
     .partidos-grafico-parrafo,
     .partidos-grafico-grafica {
         max-width: 100%;
+    }
+
+    .partidos-grafico-parrafo {
+        font-size: .75rem;
+    }
+
+    .distrito {
+        margin: 0 auto;
+        display: block;
     }
 
 }
