--- a/src/css/_partidos.css
+++ b/src/css/_partidos.css
@@ -32,7 +32,6 @@
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 1rem;
     grid-row-gap: 1rem;
-    grid-auto-rows: 1fr;
     vertical-align: top;
     border-radius: 4px;
     padding: 1rem;
@@ -56,7 +55,6 @@
 
 .partidos-cabecera-texto-derecha {
     font-size: 1rem;
-    margin: 0 0 1.5rem;
     max-width: 80%;
     margin: 1rem auto;
 }
@@ -72,6 +70,12 @@
 
 .partidos-concejales-listado {
     padding-left: 0;
+}
+
+.partidos-cabecera-subtitle {
+  grid-column: 1 / 5;
+  font-size: 1rem;
+  margin: 0;
 }
 
 .partido-concejales-lista-elemento {
@@ -103,7 +107,7 @@
 
 .partidos-grafico {
     width: 100%;
-    padding: 5vw 10vw;
+    padding: 1rem 10vw;
     font-size: 0;
     margin: 0 auto;
     background-color: #f1f1f1;
@@ -191,14 +195,23 @@
     }
 
     .partidos-grafico-titulo {
-        padding: 1rem;
-        font-size: 1.5rem;
+        font-size: 1rem;
         width: 100%;
+        padding: 0;
     }
 
     .partidos-grafico-parrafo,
     .partidos-grafico-grafica {
         max-width: 100%;
+    }
+
+    .partidos-grafico-parrafo {
+        font-size: .75rem;
+    }
+
+    .distrito {
+        margin: 0 auto;
+        display: block;
     }
 
 }
