--- a/css/styles.css
+++ b/css/styles.css
@@ -2250,9 +2250,8 @@ http://www.tipue.com/search
             border-color: #121;
         }
 .partidos-cabecera-izda {
-    width: max-content;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 1rem;
     grid-row-gap: 1rem;
     vertical-align: top;
@@ -2290,7 +2289,7 @@ http://www.tipue.com/search
     padding-left: 0;
 }
 .partidos-cabecera-subtitle {
-  grid-column: 1 / 5;
+  grid-column: 1 / 4;
   font-size: 1rem;
   margin: 0;
 }
@@ -2366,6 +2365,7 @@ http://www.tipue.com/search
 .grafica-favor-legislatura {
     max-width: 70%;
     margin: 3rem auto;
+    /*stylelint-enable*/
 }
 .grafica-favor-legislatura .partidos-grafico-parrafo {
         max-width: 20rem;
@@ -2382,6 +2382,7 @@ http://www.tipue.com/search
 .grafica-favor-legislatura text {
         font-family: 'Roboto Condensed', sans-serif;
     }
+/*stylelint-disable*/
 .grafica-favor-legislatura .axis-x .tick line {
                 stroke: none;
             }
